[gd_scene load_steps=12 format=3 uid="uid://rrt50vcpu0a8"]

[ext_resource type="PackedScene" uid="uid://cd5s5a61atoor" path="res://enemy/circler/circler.tscn" id="1_1ch5e"]
[ext_resource type="Script" path="res://enemy/circler/circler_heavy.gd" id="2_dnpde"]
[ext_resource type="PackedScene" uid="uid://drymx8tiiv45c" path="res://assets/enemies/crab_plane.glb" id="2_tbf1k"]
[ext_resource type="Curve3D" uid="uid://tq4rb6qgfvm6" path="res://enemy/circler/circler_heavy_path_1.tres" id="3_3ah31"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gfqxr"]
size = Vector3(1, 1.11691, 1.5473)

[sub_resource type="CylinderMesh" id="CylinderMesh_580mt"]
top_radius = 0.18

[sub_resource type="Animation" id="Animation_gc8v0"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8hc8d"]
resource_name = "Shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0820305, 0.0802851, -0.0541052), Vector3(0.111701, -0.0471239, 0.0523599), Vector3(-0.0331613, -0.0122173, -0.0506145), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_c2evp"]
resource_name = "shake_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0820305, 0.0802851, -0.0541052), Vector3(0.111701, -0.0471239, 0.0523599), Vector3(-0.0331613, -0.0122173, -0.0506145), Vector3(0.0628319, 0.106465, 0.106465), Vector3(-0.0226893, -0.0820305, -0.0506145), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_atsly"]
_data = {
"RESET": SubResource("Animation_gc8v0"),
"shake": SubResource("Animation_8hc8d"),
"shake_2": SubResource("Animation_c2evp")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ilnfj"]
size = Vector3(1, 1.11691, 1.5473)

[node name="CirclerHeavy" instance=ExtResource("1_1ch5e")]
script = ExtResource("2_dnpde")
speed = 12.0
burst_delay = 0.1
max_shoot_times = 3
activation_distance = 8.0

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("BoxShape3D_gfqxr")

[node name="Mesh" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="crab_plane" parent="Mesh" index="0" instance=ExtResource("2_tbf1k")]
transform = Transform3D(-1.79663e-08, 0, 0.41102, 0, 0.41102, 0, -0.41102, 0, -1.79663e-08, 0.0621454, 0.2057, -0.86465)

[node name="MeshInstance3D" parent="Mesh" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.12231e-08, 1, 0, -0.943076, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_580mt")

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="Mesh" index="2"]
libraries = {
"": SubResource("AnimationLibrary_atsly")
}
speed_scale = 1.5

[node name="HealthArea" parent="." index="2"]
health = 8.0

[node name="CollisionShape3D" parent="HealthArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0584564, 0.0123596)
shape = SubResource("BoxShape3D_ilnfj")

[node name="MissileTarget" parent="." index="3"]
max_targets = 3

[node name="CollisionShape3D" parent="MissileTarget" index="1"]
shape = SubResource("BoxShape3D_ilnfj")

[node name="Path3D" parent="." index="4"]
curve = ExtResource("3_3ah31")

[node name="PathFollow3D" parent="Path3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.628975, -29.1242, 0)

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="5"]
aabb = AABB(-1.91139, -1.83746, -3.43027, 3.82278, 3.67492, 6.86054)

[node name="ShootTimer" parent="." index="7"]
one_shot = false

[connection signal="damaged" from="HealthArea" to="." method="_on_health_area_damaged"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
